--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -9,15 +9,7 @@
     {% activity_by_slug group_create as group_create_act %}
     <a href='{% url group_create %}'>Create a group</a> (+ {{ group_create_act.points }} points)
 </p>
-<div id='house_party_dialog'>
-    <form action="{% url rah.views.house_party %}" method="post" id="house_party_form">
-        <p>We'd love to talk to you about hosting a house party.</p>
-        <div>
-        {{ house_party_form.as_p }}
-        </div>
-        {% csrf_token %}
-    </form>
-</div>
+{% include "rah/_house_party_dialog.html" %}
 <div id='invite_friend_dialog'>
     {% include "_invite_form.html" %}
 </div>
