--- a/templates/records/mag_tweet.html
+++ b/templates/records/mag_tweet.html
@@ -1,5 +1,7 @@
 {% extends "records/base.html" %}
 {% block activity_item %}
     {% safe_user_link record.user %} posted a message to twitter
+{% endblock %}
+{% block activity_date %}
     on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
