--- a/static/css/style.css
+++ b/static/css/style.css
@@ -723,7 +723,18 @@ a.tag:hover {
 /* @end */
 
 /* Activity Stream */
-.activity_item { margin-bottom:10px;}
+.activity_item { 
+    margin-bottom: 25px;
+    font-size: 13px;
+    color: #9C9C9C;
+}
+.activity_item a {
+    color: #9C9C9C;
+    text-decoration: underline;
+}
+.activity_item .activity_date { 
+    color: #C5C5C5;
+}
 
 
 /* @groups rateable */
