--- a/templates/records/action_commitment.html
+++ b/templates/records/action_commitment.html
@@ -2,5 +2,7 @@
 {% block activity_item %}
     {% safe_user_link record.user %} committed to complete the action
     <a href="{% url action_detail content_object.slug %}">{{ content_object.name }}</a> 
+{% endblock %}
+{% block activity_date %}
     by {{ record.data.date_committed|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
