--- a/templates/records/base.html
+++ b/templates/records/base.html
@@ -1,3 +1,6 @@
 <div id="record_{{ record.id }}" class="activity_item activity_{{ record.activity.slug }}">
     {% block activity_item %}{% endblock %}
+    <span class="activity_date">
+        {% block activity_date %}{% endblock %}
+    </span>
 </div>
