--- a/templates/records/comment_create.html
+++ b/templates/records/comment_create.html
@@ -2,5 +2,7 @@
 {% block activity_item %}
     {% safe_user_link record.user %} commented on  
     <a href="{% url action_detail content_object.action.slug %}">{{ content_object.name }}</a> 
+{% endblock %}
+{% block activity_date %}
     on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
