--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -29,7 +29,9 @@
                 <h2>Top Members</h2>
                 <ol>
                 {% for user in top_members %}
-                    <li><a href="{% url profile user.id %}">{{ user.get_full_name }}</a> ({{ user.get_profile.total_points }})</li>
+                    {% if forloop.counter0 < 3 %}
+                        <li><a href="{% url profile user.id %}">{{ user.get_full_name }}</a> ({{ user.get_profile.total_points }})</li>
+                    {% endif %}
                 {% endfor %}
                 </ol>
             {% endif %}
