--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 							<a href="{% url index %}" id="nav_welcome">Welcome</a>
 		                    <a href="{% url index %}" id="nav_dashboard">Dashboard</a>
 		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
-		                    <a href="{% url group_list %}" id="nav_community">Community</a>
+		                    <a href="{% url group_list %}" id="nav_teams">Teams</a>
 		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
 							<a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a>
 						</div>
@@ -61,7 +61,7 @@
 							<a href="{% url login %}?next={{ request.path }}" id="nav_login">Login</a>
 		                    <a href="{% url index %}" id="nav_home">Home</a>
 		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
-		                    <a href="{% url group_list %}" id="nav_community">Community</a>
+		                    <a href="{% url group_list %}" id="nav_teams">Teams</a>
 		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
 							<a href="{% url register %}" id="nav_signup">Sign Up</a>
 						</div>
