--- a/static/css/style.css
+++ b/static/css/style.css
@@ -495,7 +495,7 @@ a.button:hover {
     font-size:12px;
     border: 2px solid #000;
     padding: 5px;
-    background-color: #fee;
+    background-color: #F4F9FD;
     z-index:1002;
 }
 
