added the user tongue to the base.html page, so that it can be displayed on all pages if the user is logged in [completed: 241]

--- a/actions/templates/actions/action_cancel.html
+++ b/actions/templates/actions/action_cancel.html
@@ -1,6 +1,6 @@
 {% extends "rah/base.html" %}
 
-{% block content %}
+{% block right_content %}
     <form action="" method="post">
         <p>Are you sure you want to cancel your commitment?</p>
         <input type="submit" value="Yes"> |
