--- a/groups/templates/groups/group_disc_create.html
+++ b/groups/templates/groups/group_disc_create.html
@@ -1,6 +1,7 @@
 {% extends "rah/base.html" %}
 
-{% block content %}
+{% block right_content %}
 	{% include "groups/_group_disc_create_form.html" %}
 {% endblock %}
+
 {% block js %}{% endblock %}
