--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -1,35 +1,7 @@
 {% extends "rah/base.html" %}
 {% load comments %}
 
-{% block content %}
-<div class="grid_3 alpha">
-    <div id="breadcrumbs">
-        <a href="{% url index %}">Home</a> &rsaquo;
-        <a href="{% url action_show %}">Actions</a> &rsaquo;
-        {{action.name}}
-    </div>
-    <h1>{{action.name}}</h1>
-    <span class='tag_list'>
-        {% for tag in action.tags %}
-            <a class="tag" href="{% url action_tag tag %}">{{ tag.name|deslug }}</a>
-        {% endfor %}
-    </span>
-    <div class="action_content">
-        {% render_template_snippet action.content %}
-    </div>
-    <div id="comments">
-        <div id="comments_divider"></div>
-        {% with action as object %}
-            {% render_comment_list for object %}
-            {% render_comment_form for object %}
-        {% endwith %}
-    </div>
-    <div id="commit_widget">
-        <p>When do you think you'll complete this action?</p>
-        <div class="commit_calendar"></div>
-    </div>
-</div>
-<div class="grid_1 omega">
+{% block left_sidebar %}
     {% if progress.date_committed and not progress.is_completed %}
         <h2>Commitment</h2>
         <p>
@@ -70,8 +42,34 @@
             {% endif %}
         </ul>
     {% endif %}
-
-</div>
-
 {% endblock %}
+
+{% block right_content %}
+    <div id="breadcrumbs">
+        <a href="{% url index %}">Home</a> &rsaquo;
+        <a href="{% url action_show %}">Actions</a> &rsaquo;
+        {{action.name}}
+    </div>
+    <h1>{{action.name}}</h1>
+    <span class='tag_list'>
+        {% for tag in action.tags %}
+            <a class="tag" href="{% url action_tag tag %}">{{ tag.name|deslug }}</a>
+        {% endfor %}
+    </span>
+    <div class="action_content">
+        {% render_template_snippet action.content %}
+    </div>
+    <div id="comments">
+        <div id="comments_divider"></div>
+        {% with action as object %}
+            {% render_comment_list for object %}
+            {% render_comment_form for object %}
+        {% endwith %}
+    </div>
+    <div id="commit_widget">
+        <p>When do you think you'll complete this action?</p>
+        <div class="commit_calendar"></div>
+    </div>
+{% endblock %}
+
 {% block js %}page_action_detail{% endblock %}
