--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,5 +1,5 @@
 {% extends "rah/base.html" %}
-{% block content %}
+{% block right_content %}
     <form id="group_form" action="" method="post" enctype="multipart/form-data">
         {% include "groups/_group_form.html" %}
         <p><input type="submit" value="Create Group" /></p>
