--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -1,14 +1,58 @@
 {% extends "rah/base.html" %}
 {% load records %}
+
 {% block extralinks %}
-{% if group.slug %}
-    <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower@Home Group Activity" />
-{% endif %}
+    {% if group.slug %}
+        <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower@Home Group Activity" />
+    {% endif %}
 {% endblock %}
 
+{% block left_sidebar %}
+    {% if group.is_joinable and not is_member and not membership_pending %}
+        <a class="button" href="{% url group_join group.id %}">Join Group</a>
+    {% endif %}
+    {% if membership_pending %}
+        <span class="membership_status">Your membership status is currently <b>pending</b>.</span>
+    {% endif %}
+    
+    {% if requesters %}
+        <h2>Membership Requests</h2>
+        <ul>
+            {% for requester in requesters %}
+                <li class="membership_request">
+                    {% safe_user_link requester %} would like to join
+                    <div class="membership_tools">
+                        <a href="{% url group_approve group.id requester.id %}">Approve</a> or 
+                        <a href="{% url group_deny group.id requester.id %}">Deny</a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    {% if is_member %}
+        <h2>Magnify your Impact</h2>
+        <a href='{% url invite_form_handler %}' id='invite_friend_link'>Invite a friend to this group</a>
+        <div id='invite_friend_dialog'>
+            {% include "_invite_form.html" %}
+        </div>
+    {% endif %}
+    <div id="group_activity" class="group_section">
+        {% if group_records %}
+            <h2>Group Activity
+                {% if group.slug %}
+                    <a class="atom_link" href="{% url group_activity_feed group.slug %}">
+                        <img src="{{ MEDIA_URL }}images/theme/rss.png" alt="atom feed" />
+                    </a>
+                {% endif %}
+            </h2>
+            {% for record in group_records %}
+                {% render_record record %}
+            {% endfor %}
+        {% endif %}
+    </div>
+{% endblock %}
 
-{% block content %}
-<div class="grid_3 alpha">
+{% block right_content %}
     <div id="group_header" class="group_section">
         {% include "groups/_group_header.html" %}
     </div>
@@ -66,68 +110,21 @@
     </div>
 
 	{% if not group.is_geo_group %}
-    <div id="group_discussion_list" class="group_section">
-    	<h2>Discussions</h2>
-		{% if is_poster %}
-			<a href="{% url group_disc_create group.slug %}">Start new discussion</a>
-		{% endif %}
-		{% if not is_poster and not discs %}
-			No discussions yet.
-		{% endif %}
+        <div id="group_discussion_list" class="group_section">
+        	<h2>Discussions</h2>
+    		{% if is_poster %}
+    			<a href="{% url group_disc_create group.slug %}">Start new discussion</a>
+    		{% endif %}
+    		{% if not is_poster and not discs %}
+    			No discussions yet.
+    		{% endif %}
 		
-		{% if discs %}	
-			{% include "groups/_group_disc_list.html" %}
-			<a href="{% url group_disc_list group.slug %}">See all discussions</a>	
-		{% endif %}
-    </div>
-	{% endif %}
-	
-    <div id="group_activity" class="group_section">
-        {% if group_records %}
-            <h2>Group Activity
-                {% if group.slug %}
-                    <a class="atom_link" href="{% url group_activity_feed group.slug %}">
-                        <img src="{{ MEDIA_URL }}images/theme/rss.png" alt="atom feed" />
-                    </a>
-                {% endif %}
-            </h2>
-            <ul>
-            {% for record in group_records %}
-                <li>{% render_record record %}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-    </div>
-</div>
-<div class="grid_1 omega">
-    {% if group.is_joinable and not is_member and not membership_pending %}
-        <a class="button" href="{% url group_join group.id %}">Join Group</a>
-    {% endif %}
-    {% if membership_pending %}
-        <span class="membership_status">Your membership status is currently <b>pending</b>.</span>
-    {% endif %}
-    
-    {% if requesters %}
-        <h2>Membership Requests</h2>
-        <ul>
-            {% for requester in requesters %}
-                <li class="membership_request">
-                    {% safe_user_link requester %} would like to join
-                    <div class="membership_tools">
-                        <a href="{% url group_approve group.id requester.id %}">Approve</a> or 
-                        <a href="{% url group_deny group.id requester.id %}">Deny</a>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% if is_member %}
-        <h2>Magnify your Impact</h2>
-        <a href='{% url invite_form_handler %}' id='invite_friend_link'>Invite a friend to this group</a>
-        <div id='invite_friend_dialog'>
-            {% include "_invite_form.html" %}
+    		{% if discs %}	
+    			{% include "groups/_group_disc_list.html" %}
+    			<a href="{% url group_disc_list group.slug %}">See all discussions</a>	
+    		{% endif %}
         </div>
-    {% endif %}
-</div>
+	{% endif %}
 {% endblock %}
+
 {% block js %}page_group_detail{% endblock %}
