--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
-		{% load dated_static %}
+        {% load dated_static %}
         <title>{% block title %}{% endblock %} | Repower@Home</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
@@ -21,78 +21,92 @@
     <body>
         <div id="loading" class="warning">Loading...</div>
         <div id="header_container">
-			<div id="header_bg">
-	            <div id="header" class="container_4">
-	                <a href="/" title="Repower America" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
-	                {# <div id="header-links"> #}
-	                {#     {% if user.is_authenticated %} #}
-	                {#         {{ user }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a> #}
-	                {#     {% else %} #}
-	                {#         <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a> #}
-	                {#     {% endif %} #}
-	                {#     | <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> #}
-	                {#     {% if user.is_staff %} #}
-	                {#         | <a href="{% url admin_root '' %}">Admin</a> #}
-	                {#     {% endif %} #}
-	                {# </div> #}
-	                <form action="/search" id="cse_search_box_form">
-	                    <div>
-	                        <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
-	                        <input type="hidden" name="cof" value="FORID:10" />
-	                        <input type="hidden" name="ie" value="UTF-8" />
-	                        <span class="overset">
+            <div id="header_bg">
+                <div id="header" class="container_4">
+                    <a href="/" title="Repower at Home" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
+                    {# <div id="header-links"> #}
+                    {#     {% if user.is_authenticated %} #}
+                    {#         {{ user }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a> #}
+                    {#     {% else %} #}
+                    {#         <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a> #}
+                    {#     {% endif %} #}
+                    {#     | <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> #}
+                    {#     {% if user.is_staff %} #}
+                    {#         | <a href="{% url admin_root '' %}">Admin</a> #}
+                    {#     {% endif %} #}
+                    {# </div> #}
+                    <form action="/search" id="cse_search_box_form">
+                        <div>
+                            <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
+                            <input type="hidden" name="cof" value="FORID:10" />
+                            <input type="hidden" name="ie" value="UTF-8" />
+                            <span class="overset">
                                 <label class="hidden" for="cse_search_box">Search</label>
-	                            <input type="text" name="q" size="31" id="cse_search_box"/>
-	                        </span>
-	                        <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
-	                    </div>
-	                </form>
-	                {% if user.is_authenticated %}
-						<div id="nav_logged_in" class="nav">
-							<a href="{% url index %}" id="nav_welcome">Welcome</a>
-		                    <a href="{% url index %}" id="nav_dashboard">Dashboard</a>
-		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
-		                    <a href="{% url group_list %}" id="nav_teams">Teams</a>
-		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
-							<a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a>
-						</div>
+                                <input type="text" name="q" size="31" id="cse_search_box"/>
+                            </span>
+                            <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
+                        </div>
+                    </form>
+                    {% if user.is_authenticated %}
+                        <div id="nav_logged_in" class="nav">
+                            <a href="{% url index %}" id="nav_welcome">Welcome</a>
+                            <a href="{% url index %}" id="nav_dashboard">Dashboard</a>
+                            <a href="{% url action_show %}" id="nav_actions">Actions</a>
+                            <a href="{% url group_list %}" id="nav_teams">Teams</a>
+                            <a href="{% url blog_index %}" id="nav_blog">Blog</a>
+                            <a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a>
+                        </div>
                     {% else %}
-						<div id="nav_logged_out" class="nav">
-							<a href="{% url login %}?next={{ request.path }}" id="nav_login">Login</a>
-		                    <a href="{% url index %}" id="nav_home">Home</a>
-		                    <a href="{% url action_show %}" id="nav_actions">Actions</a>
-		                    <a href="{% url group_list %}" id="nav_teams">Teams</a>
-		                    <a href="{% url blog_index %}" id="nav_blog">Blog</a>
-							<a href="{% url register %}" id="nav_signup">Sign Up</a>
-						</div>
+                        <div id="nav_logged_out" class="nav">
+                            <a href="{% url login %}?next={{ request.path }}" id="nav_login">Login</a>
+                            <a href="{% url index %}" id="nav_home">Home</a>
+                            <a href="{% url action_show %}" id="nav_actions">Actions</a>
+                            <a href="{% url group_list %}" id="nav_teams">Teams</a>
+                            <a href="{% url blog_index %}" id="nav_blog">Blog</a>
+                            <a href="{% url register %}" id="nav_signup">Sign Up</a>
+                        </div>
                     {% endif %}
-	            </div>
-			</div>
+                </div>
+            </div>
         </div>
         <div id="content_container">
-			<div id="content_bg">
-		        <div id="message_box">
-		            {% include '_messages.html' %}            
-		        </div>
-				<div id="content">
-		            <div class="container_4">
-		                {% block content %}{% endblock %}
-						<div class="clear"></div>
-		            </div>
-				</div>
-			</div>
+            <div id="content_bg">
+                <div id="message_box">
+                    {% include '_messages.html' %}
+                </div>
+                <div id="content">
+                    <div class="container_4">
+                        {% block content %}
+                            <div class="grid_1 alpha">
+                                {% block tongue %}
+                                    {% if request.user.is_authenticated %}
+                                        {% with request.user.get_profile as profile %}
+                                            {% include "rah/_tongue.html" %}
+                                        {% endwith %}
+                                    {% endif %}
+                                {% endblock tongue %}
+                                {% block left_sidebar %}{% endblock left_sidebar %}
+                            </div>
+                            <div class="grid_3 omega">
+                                {% block right_content %}{% endblock right_content %}
+                            </div>
+                        {% endblock content %}
+                        <div class="clear"></div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="footer_container">
             <div id="footer">
-				<div id="footer_copy">
-					<p>
-	                    Copyright &copy; The Alliance for Climate Protection 2010. All Rights Reserved.<br/>
-	                    <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> | 
-	                    <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> | 
-	                    <a href="{% url terms_of_use %}">Terms of Use</a> | 
-	                    <a href="{% url privacy_policy %}">Privacy Policy</a>
-	                </p>				
-				</div>
+                <div id="footer_copy">
+                    <p>
+                        Copyright &copy; The Alliance for Climate Protection 2010. All Rights Reserved.<br/>
+                        <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> | 
+                        <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> | 
+                        <a href="{% url terms_of_use %}">Terms of Use</a> | 
+                        <a href="{% url privacy_policy %}">Privacy Policy</a>
+                    </p>                
+                </div>
             </div>
         </div>
         <div id="feedback_dialog"></div>
