--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
     </p>
 {% endblock %}
 
-{% block content %}
+{% block right_content %}
     <div id="breadcrumbs">
         <a href="{% url rah.views.index %}">Home</a> &rsaquo;
         <a href="{% url blog_index %}">Blog</a> &rsaquo;
