--- a/templates/rah/_tongue.html
+++ b/templates/rah/_tongue.html
@@ -3,35 +3,35 @@
     <div id="tongue_username">{{ profile.user }}</div>
     {% if profile.location %}
         <div id="tongue_location">
-			<span class="icon_from"></span> {{ profile.location }}
-		</div>
+            <span class="icon_from"></span> {{ profile.location }}
+        </div>
     {% endif %}
-	<div class="spacer"></div>
-	{% if user.is_authenticated and not is_others_profile %}
-		<div id="tongue_links">
-			<a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> &ndash; <a href="{% url logout %}">Logout</a>
-		</div>
-	{% endif %}
-	<div id="tongue_points">
-		{{ profile.total_points }}<span> points</span>
-	</div>
-	{# <div id="tongue_prizes"> #}
-	{# 	Prizes you've won #}
-	{# </div> #}
-	<div id="tongue_activity">
-		<a class="chart_link" href="{% url records_chart profile.user.id %}">Activity</a>
-		<div>
-			<a href="{% url records_chart profile.user.id %}" id="chart_dialog_link" class="chart_link" title="View progress chart">
-				<img src="/static/images/theme/tongue_graph.gif" alt="graph"/>
-			</a>
-		</div>
-	</div>
+    <br class="spacer" />
+    {% if profile.user == request.user %}
+        <div id="tongue_links">
+            <a href="{% url rah.views.profile_edit request.user.id %}">Edit your profile</a> &ndash; <a href="{% url logout %}">Logout</a>
+        </div>
+    {% endif %}
+    <div id="tongue_points">
+        {{ profile.total_points }}<span> points</span>
+    </div>
+    {# <div id="tongue_prizes"> #}
+    {#     Prizes you've won #}
+    {# </div> #}
+    <div id="tongue_activity">
+        <a class="chart_link" href="{% url records_chart profile.user.id %}">Activity</a>
+        <div>
+            <a href="{% url records_chart profile.user.id %}" id="chart_dialog_link" class="chart_link" title="View progress chart">
+                <img src="/static/images/theme/tongue_graph.gif" alt="graph"/>
+            </a>
+        </div>
+    </div>
     {# {% if profile.building_type %} #}
     {#     <b>Home:</b> {{ profile.get_building_type_display }}<br/> #}
     {# {% endif %} #}
     {# {% if profile.about %} #}
     {#     <b>About: </b>{{ profile.about }}<br/> #}
     {# {% endif %} #}
-	
-	<div class="spacer"></div>
+    
+    <div class="spacer"></div>
 </div>
