--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -1,5 +1,6 @@
 {% extends "rah/base.html" %}
-{% block content %}
+
+{% block right_content %}
     <h1>Edit your Profile</h1>
     <div id="profile_edit_tabs">
         <ul>
@@ -48,4 +49,5 @@
         </div>
     </div>
 {% endblock %}
+
 {% block js %}page_profile_edit{% endblock %}
