cleaned up the cancel commitment link, so you are not redirected to a different page first.

--- a/actions/templates/actions/_action_form.html
+++ b/actions/templates/actions/_action_form.html
@@ -24,6 +24,8 @@
                     <a href="{% url action_cancel action.slug %}" class="commit_cancel">cancel</a>)
                 </p>
             </form>
+            <form class="action_cancel_form" name="action_cancel_form" method="post"
+                action="{% url action_cancel action.slug %}">{% csrf_token %}</form>
         {% endif %}
         <form class="action_complete_form" name="action_complete_form" method="post"
             action="{% url action_complete action.slug %}">
