--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                     <a href="/" title="Repower at Home" id="header_logo"><img src="{% dated_static 'images/theme/logo.png' %}" alt="Repower at Home logo"/></a>
                     {# <div id="header-links"> #}
                     {#     {% if user.is_authenticated %} #}
-                    {#         {{ user }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a> #}
+                    {#         {{ user.get_full_name }} | <a href="{% url rah.views.profile_edit user.id %}">Edit your profile</a> | <a href="{% url logout %}">Logout</a> #}
                     {#     {% else %} #}
                     {#         <a href="{% url login %}?next={{ request.path }}">Login</a> | <a href="{% url register %}">Sign Up</a> #}
                     {#     {% endif %} #}
