--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -15,6 +15,7 @@
             </div>
             <div class="author">
                 <img class="gravatar" src="{{ comment.user.get_profile.get_gravatar_url }}" alt="user gravatar" />
+                <br class="spacer" />
                 <div class="user_name">{% safe_user_link comment.user %}</div>
             </div>
             <br class="spacer" />
