--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -27,7 +27,7 @@
         {% with object as post %}
             <div>
                 {% include 'blog/_post_header.html' %}
-                <div class="post_body">{{ post.body|safe|linebreaks }}</div>
+                <div class="post_body">{{ post.body|safe }}</div>
             </div>
         {% endwith %}
     </div>
