--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,30 +1,36 @@
 {% extends "base.html" %}
-{% load search_widget %}
 
 {% block right_content %}
     <div class="grid_2 alpha">
-        {% if new_groups %}
-            <h3>New Groups</h3>
-            <ol>
-                {% for group in new_groups %}
-                    <li>
-                        <div class="group_section">
-                            {% include "groups/_group_header.html" %}
-                            {% if group.is_joinable and not group.is_member and not group.membership_pending %}
-                                <a class="button" href="{% url group_join group.id %}">Join Group</a>
-                            {% endif %}
-                        </div>
-                    </li>
-                {% endfor %}
-            </ol>
+		{% if user.is_authenticated %}
+			<h1>Your Teams</h1>
+			{% with my_groups as groups%}
+				{% include "groups/_group_nugget_list.html" %}
+			{% endwith %}
+		{% endif %}
+		<h1>Start a Team</h1>
+        <p>
+			Are you ready to become a leading voice for energy efficiency in your community? Starting a team is a great way to help
+			your neighborhood, church, school, or local group become more energy savvy. As a team leader, you can use your team to
+			organize meetings, encourage action, and track progress towards your team's goals.
+		</p>
+        <a class="button" href="{% url group_create %}">Start a Team</a>
+        {% if groups %}
+            <h1>Join a Team</h1>
+			<p>
+				People across the country are working together to make their homes and their communities better than ever before. As
+				part of a team, you can brainstorm ideas for improving your community, share local tips about energy efficiency, and
+				meet people who are interested in building a cleaner tomorrow.
+			</p>
+			{% include "groups/_group_nugget_list.html" %}
         {% endif %}
     </div>
     <div class="grid_1 omega">
-        <h2>About Groups</h2>
-        <p class="group_description">Groups help you share your achievements and see what your friends are doing. You can also use groups to organize energy efficiency campaigns and competitions in your neighborhood, school, or community. Search below to find a group, or start your own.</p>
-        <a class="button" href="{% url group_create %}">Create a Group</a>
-        <h3 class="search_title">Find a Group</h3>
-        {% search_widget group_search %}
+
     </div>
 {% endblock %}
-{% block js %}page_group_list{% endblock %}
+
+{# {% load search_widget %} #}
+{# <h3 class="search_title">Find a Group</h3> #}
+{# {% search_widget group_search %} #}
+{# {% block js %}page_group_list{% endblock %} #}
