--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -18,7 +18,7 @@
         {% include 'rah/_magnify.html' %}
     {% endif %}
     {% if my_groups or my_geo_groups %}
-        <h2>Groups</h2>
+        <h2>Teams</h2>
         <p>
         {% for group in my_groups %}
             <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
