Redirect to where you were post registration IFF there was a next param. So clicking signup from the nav does NOT redirect to the last page viewed, but instead redirects to the logged in homepage. [completed: 252]

--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -3,7 +3,7 @@
 {% block tongue %}
     {% if not request.user.is_authenticated %}
         <div id="tongue_signup">
-            <form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
+            <form action="{% url register %}?next={{ request.path }}" method="post" id="registration_form" autocomplete="off">
                 <h1>Sign Up!</h1>
                 {% with register_form as form %}
                     {% include "rah/_overset_form.html" %}
