Removing @ sign from lots of places. Repower@Home --> Repower at Home

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -3,7 +3,7 @@
 
 {% block extralinks %}
     {% if group.slug %}
-        <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower@Home Group Activity" />
+        <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower at Home Group Activity" />
     {% endif %}
 {% endblock %}
 
