--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | Repower@Home site admin{% endblock %}
+{% block title %}{{ title }} | Repower at Home site admin{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">Repower@Home Administration</h1>
+<h1 id="site-name">Repower at Home Administration</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
