--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 {% load blog comments %}
 
 {% block extralinks %}
-<link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower@Home Blog" />
+<link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
 {% endblock %}
 
 {% block title %}Post archive{% endblock %}
