--- a/templates/rah/search.html
+++ b/templates/rah/search.html
@@ -1,6 +1,6 @@
 {% extends "rah/base.html" %}
 {% block content %}
-<h1>Search Repower@Home</h1>
+<h1>Search Repower at Home</h1>
 <div id="cse_search_results"></div>
 <script type="text/javascript">
     var googleSearchIframeName = "cse_search_results";
